Create and adaptive subscribe for, beggins get in touch

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -503,6 +503,309 @@
    height: 100%;
 }
 
+.page {
+
+   &__whoweare {
+      background: #FFFFFF;
+   }
+}
+.whoweare {
+   padding: 80px 0px 130px 0px;
+   @media (max-width:950px) {
+      padding: 50px 0px 50px 0px;
+   }
+
+   &_title {
+      font-weight: 800;
+      font-size: 40px;
+      line-height: 57/40 * 100%;
+      letter-spacing: 0.2px;
+      @media (max-width:950px) {
+         font-size: 24px;
+      }
+   }
+
+   &_title:not(:last-child){
+      margin: 0px 0px 10px 0px;
+   }
+
+   &__body {
+      display: flex;
+      align-items: flex-start;
+      @media (max-width:950px) {
+         flex-direction: column-reverse;
+         align-items: stretch;
+      }
+   }
+
+   &__video {
+      flex: 0 0 600/1046 * 100%;
+      position: relative;
+      padding: 0px 0px 42.25% 0px;
+      @media (max-width:992px) {
+         padding: 0px 0px 56% 0px;
+      }
+      @media (max-width:350px) {
+         padding: 0px 0px 65% 0px;
+      }
+   }
+
+   &__video:not(:last-child){
+      margin: 50px 0px 0px 0px;
+   }
+
+   &__video iframe{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+   }
+
+   &__content {
+      flex: 1 1 auto;
+      padding: 20px 0px 0px 121px;
+      @media (max-width:1080px) {
+         padding: 0px 0px 0px 50px;
+      }
+      @media (max-width:420px) {
+         padding: 0px 0px 0px 10px;
+      }
+   }
+
+   &__text {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 20/14 * 100%;
+      color: #737373;
+      letter-spacing: 0.2px;
+   }
+
+   &__items {
+      padding: 50px 0px 0px 0px;
+   }
+
+   &__item {
+      display: flex;
+   }
+   &__item:not(:last-child){
+      margin: 0px 0px 30px 0px;
+   }
+}
+
+.practice {
+
+   &__header {
+      margin: 0px 0px 100px 0px;
+      @media (max-width:950px) {
+         margin: 0px 0px 30px 0px;
+      }
+   }
+}
+
+.item { 
+   &__whoweare {
+      &__icon{
+         flex: 0 0 32px;
+      }
+      &__title{
+         font-size: 16px;
+         line-height: 24/16 * 100%;
+         letter-spacing: 0.1px;
+         font-weight: 800;
+      }
+      &__title:not(:last-child){
+         margin: 0px 0px 5px 0px;
+      }
+      &__text{
+         font-weight: 600;
+         font-size: 14px;
+         line-height: 24/14 * 100%;
+         letter-spacing: 0.2px;
+         color: #737373;
+         
+      }
+   }
+}
+
+.item-whoweare__content{
+   flex: 1 1 auto;
+   padding: 0px 0px 0px 20px;
+}
+
+
+.clients {
+   margin: 0px 0px 10px 0px;
+   &__list {
+      margin: 70px 0px;
+      @media (max-width:700px) {
+         margin: 20px 0px 20px 0px;
+      }
+   }
+
+   &__items {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      @media (max-width:870px) {
+         flex-direction: column;
+      }
+   }
+   &__item:not(:last-child){
+      margin: 0px 0px 75px 0px;
+   }
+   &__item:last-child{
+      align-self: flex-start;
+      @media (max-width:870px) {
+         align-self:center;
+      }
+   }
+}
+
+.subscribe {
+   position: relative;
+   padding: 0px 0px 20px 0px;
+   &__body {
+      position: relative;
+      z-index: 2;
+      padding: 30px 50px;
+      align-items: center;
+      background: #17213C;
+      border-radius: 2px;
+      @media (min-width:1070px) {
+         margin: 0px 30px;
+      }
+      @media (min-width:810px) {
+         display: flex;
+         justify-content: space-between;
+         
+      }
+
+      @media (max-width:810px){
+         margin: 0px -15px;
+         padding: 20px 20px;
+      }
+      @media (max-width:370px){
+         padding: 20px 5px;
+      }
+   }
+
+   &__title {
+      flex: 0 1 50%;
+      font-size: 24px;
+      line-height: 32/24 * 100%;
+      letter-spacing: 0.1px;
+      color: #FFFFFF;
+      font-weight: 700;
+      @media (max-width:810px) {
+         margin: 0px 0px 20px 0px;
+      }
+
+      @media (min-width:810px) {
+         max-width: 266px;
+      }
+   }
+
+   &__form {
+      flex: 0 1 50%;
+      display: flex;
+      align-items: center;
+      @media (max-width:370px){
+         flex: 0 1 250px;
+      }
+   }
+
+   &__form:hover{
+      border: 1px solid #ffd700;
+      border-radius: 0px 5px 5px 0px;
+   }
+
+   &__input {
+      flex: 1 1 auto;
+      min-height: 58px;
+      padding: 0px 20px;
+      background: #F9F9F9;
+      border: 1px solid #E6E6E6;
+      color: #737373;
+      @media (max-width:370px) {
+         width: 100%;
+      }
+   }
+
+   &__input:focus{
+      color: #000;
+   }
+
+   &__button {
+      background: #FF7B47;
+      border: 1px solid #E6E6E6;
+      border-radius: 0px 5px 5px 0px;
+      display: flex;
+      min-height: 58px;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
+      line-height: 28/14 * 100%;
+      letter-spacing: 0.2px;
+      font-weight: 400;
+      color: #fff;
+      padding: 0px 22px;
+   }
+}
+
+.subscribe::before{
+   content: '';
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 77px;
+   left: 0;
+   background: #252B42;
+   z-index: 1;
+}
+
+@media (max-width:810px) {
+   .subscribe::before{
+      display: none;
+   }
+}
+
+.get-in-touch {
+
+   &__body {
+   }
+
+   &__item {
+      &__body {
+      }
+      &__icon {
+      }
+      &__text {
+      }
+      &__title {
+      }
+      &__button {
+      }
+   }
+}
+
+.phone {
+}
+.geo {
+}
+.telegram {
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
