--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -199,6 +199,7 @@
       font-weight: 700;
       text-align: center;
       margin: 10px 0px;
+      transition: all 0.3s ease 0s;
       @media (max-width:480px) {
          flex: 1 1 100%;
       }
@@ -752,6 +753,9 @@
       color: #fff;
       padding: 0px 22px;
    }
+   &__button:hover{
+      background: #fc4700;
+   }
 }
 
 .subscribe::before{
@@ -772,30 +776,189 @@
 }
 
 .get-in-touch {
-
+   padding: 80px 0px 135px 0px;
+   @media (max-width:660px) {
+      padding: 80px 0px 65px 0px;
+   } 
    &__body {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     flex-wrap: wrap;
    }
-
    &__item {
+      margin: 0px 0px 0px 5px;
+      @media (max-width:1006px) {
+         margin: 0px 0px 20px 15px;    
+      } 
+      @media (max-width:470px) {
+         margin: 0px 0px 20px 0px;  
+      }   
       &__body {
+         padding: 50px 0px 0px 0px;
+         flex: 0 1 320px;
+         text-align: center;
+         height: 333px;
+         background: #FFFFFF;
+         cursor: pointer;
+         @media (max-width:1006px) {
+            background: #252B42;
+            color: white;
+         } 
+         @media (max-width:470x) {
+            height: 250px;
+         }
       }
-      &__icon {
+
+      &__body:hover{
+         height: 393px;
+         background: #252B42;
+         color: white;
       }
+
       &__text {
+         margin: -50px 0px 0px 0px;
+         p:not(:last-child){
+            padding: 0px 0px 10px 0px;
+         }
       }
+
+      &__text:hover{
+         text-decoration: underline;
+      }
+      
       &__title {
+         padding: 15px 0px;
+         letter-spacing: 0.1px;
+         font-weight: 700;
+         font-size: 16px;
+         line-height: 24/16 * 100%;
       }
       &__button {
+         padding: 10px 20px;
+         min-height: 44px;
+         color:#FF7B47;
+         font-weight: 600;
+         line-height: 24/14 * 100%;
+         border: 1px solid #FF7B47;
+         border-radius: 5px;
+         background-color: transparent;
+         transition: all 0.3s ease 0s;
+      }
+      &__button:hover{
+         background-color: #ff4800;
       }
    }
 }
 
+.get-in-touch__header{
+   margin: 0px 0px 110px 0px;
+}
+
+@media (max-width:1006px) {
+   .get-in-touch__header{
+      margin: 0px 0px 70px 0px;
+   }
+} 
+
+@media (max-width:660px) {
+   .get-in-touch__header{
+      margin: 0px 0px 30px 0px;
+   }
+} 
+
+.get-in-touch__item__body:hover .get-in-touch__item__button{
+   border: 1px solid #fff;
+   color:#fff;
+}
+
+
+
 .phone {
+   position: relative;
+   left: 35%;
 }
 .geo {
+   position: relative;
+   left: 40%;
 }
 .telegram {
+   position: relative;
+   left: 35%;
 }
+
+.get-in-touch__item__body:hover svg *{
+   fill: #fff;
+}
+
+.contact {
+   background-color: white;
+   padding: 142px 0px 42px 0px;
+   @media (max-width:767px) {
+      padding: 71px 0px 42px 0px;
+   }
+
+   @media (max-width:400px) {
+      padding: 50px 0px 22px 0px;
+   }
+   &__body {
+     @media (min-width:767px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+     }
+      
+   }
+
+   &__content{
+      padding: 0px 20px;
+      @media (max-width:345px) {
+         padding: 0px 0px;
+      }
+   }
+
+   &__title {
+      letter-spacing: 0.1px;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 32/24 * 100%;
+   }
+
+   &__text {
+      letter-spacing: 0.2px;
+      color: #737373;
+      padding: 10px 0px 0px 0px;
+   }
+
+   &__button {
+      text-align: center;
+      height: 58px;
+      background: #FF7B47;
+      border-radius: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      letter-spacing: 0.2px;
+      padding: 15px 40px;
+      color: #FFFFFF;
+      letter-spacing: 0.2px;
+      font-weight: 700;
+      line-height: 28/14 * 100%;
+      transition: all 0.3s ease 0s;
+      @media (max-width:767px) {
+         margin: 15px 0px 0px 0px;
+      }
+
+      @media (max-width:400px) {
+         margin: 25px 0px 0px 0px;
+      }
+   }
+   &__button:hover{
+      background: #ff4800;
+   }
+}
+
+
 
 
 
